@@ -12,6 +12,10 @@ For editing language files in The Conquerors, I recommend [url=http://aok.heaven
 [b]Version History[/b]
 Guide makers et cetera, please include the version into which your guide was written.
 
+Version [b]2015.8.16[/b]:
+-Ability to load and show 32-bit HD SLP graphics.
+-Rotate palette view from player color copy button.
+
 Version [b]2015.8.13[/b]:
 -SLP files are released after reading.
 -Dynamically load extra HD palettes.
